[workspace]
members = [
  "artifex-batch",
  "artifex-client-cli",
  "artifex-client-web",
  "artifex-engine",
  "artifex-rpc",
  "artifex-server",
  "random-progression",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
edition = "2021"
license = "MIT"
rust-version = "1.64"
