[package]
name = "artifex-batch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex command batch management for clients"

[dependencies]
artifex-rpc = { path = "../artifex-rpc" }
tonic = "0.8.2"
thiserror = "1.0.40"
futures-util = "0.3.28"
chrono = "0.4.24"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
