[package]
name = "artifex-client-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex client program (command line)"

[dependencies]
anyhow = "1.0.71"
artifex-batch = { path = "../artifex-batch" }
artifex-rpc = { path = "../artifex-rpc" }
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.2"
tonic-reflection = "0.5.0"
