[package]
name = "artifex-client-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex client program (command line)"

[dependencies]
anyhow = "1.0.75"
artifex-batch = { path = "../artifex-batch" }
artifex-rpc = { path = "../artifex-rpc" }
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
