[package]
name = "artifex-client-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex client program (web application)"

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
prost = "0.11.2"
tonic = { version = "0.8.2", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = "0.3.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"

[build-dependencies]
tonic-build = { version = "0.8.2", default-features = false, features = ["prost"] }
