[package]
name = "artifex-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex server program"

[dependencies]
artifex-engine = { path = "../artifex-engine" }
artifex-rpc = { path = "../artifex-rpc" }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.3"
tonic-reflection = "0.6.0"
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.8"
