[package]
name = "artifex-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifex server program"

[dependencies]
artifex-engine = { path = "../artifex-engine" }
artifex-rpc = { path = "../artifex-rpc" }
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tonic-web = "0.10.2"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
